--- a/.obsidian/snippets/center_image.css
+++ b/.obsidian/snippets/center_image.css
@@ -7,3 +7,7 @@ img {
  .markdown-source-view.mod-cm6 .cm-content > * {
         margin: auto auto !important;
 }
+
+div.mermaid {
+  text-align: center;
+}
